fixed spacing.

--- a/src/App.css
+++ b/src/App.css
@@ -9,9 +9,9 @@
 }
 
 .home {
-  margin-top: 370px;
+  margin-top: 300px;
 }
 
 .icon-place{
-  margin-left: 310px;
+  margin-left: 250px;
 }
